--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/use_camera" />
+
+        <Button
+            android:id="@+id/btnSelectImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnCapture"
+            android:layout_marginTop="22dp"
+            android:text="@string/select_image" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
