--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
         <Button
             android:id="@+id/btnCapture"
             android:layout_width="wrap_content"
@@ -30,8 +29,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/btnCapture"
-            android:layout_marginTop="22dp"
+            android:layout_marginTop="6dp"
             android:text="@string/select_image" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnSelectImage"
+            android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
