--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnCapture"
+        android:id="@+id/btnCallCamera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
@@ -24,7 +24,7 @@
         android:layout_marginBottom="16dp"
         android:text="@string/select_image"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btnCapture" />
+        app:layout_constraintStart_toEndOf="@+id/btnCallCamera" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Hello World\nText Results go here!"
-        app:layout_constraintBottom_toTopOf="@+id/btnCapture"
+        app:layout_constraintBottom_toTopOf="@+id/btnCallCamera"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
