--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -26,9 +26,9 @@
 
     <ImageView
         android:id="@+id/rect_image"
-        android:layout_width="540dp"
+        android:layout_width="520dp"
         android:layout_height="340dp"
-        android:src="@drawable/id_mask"
+        android:src="@drawable/rectangle_guide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
