--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,14 +29,14 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:background="@drawable/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="414dp"
+        android:layout_height="253dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintTop_toTopOf="@+id/inferenceView"
+        android:background="@drawable/background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/inferenceView"
         app:srcCompat="@drawable/ic_launcher_foreground" />
 
     <TextView
