--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,9 +81,9 @@
         android:layout_width="110dp"
         android:layout_height="35dp"
         android:layout_marginTop="2dp"
-        android:text="@string/debug_serial"
+        android:text="@string/debug_philsys"
         android:textSize="11sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/debugSave"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"/>
+        app:layout_constraintTop_toBottomOf="@+id/debugSave" />
 </androidx.constraintlayout.widget.ConstraintLayout>
