--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -14,16 +14,13 @@
         android:layout_marginBottom="8dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/cameraMessage"
-        app:layout_constraintDimensionRatio="3:4"
-        >
-
-    </androidx.camera.view.PreviewView>
+        />
 
     <Button
     android:id="@+id/btnExitCamera"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="43dp"
+    android:layout_marginStart="12dp"
     android:layout_marginBottom="8dp"
     android:text="@string/exit_camera"
     app:layout_constraintBottom_toBottomOf="parent"
@@ -32,11 +29,13 @@
     <TextView
         android:id="@+id/cameraMessage"
         android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="49dp"
+        android:layout_width="128dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="Ensure ID covers all of the preview"
+        app:layout_constraintRight_toLeftOf="@id/btnTakePhoto"
+        app:layout_constraintLeft_toRightOf="@id/btnExitCamera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/btnTakePhoto"
         app:layout_constraintStart_toEndOf="@id/btnExitCamera" />
@@ -45,7 +44,7 @@
         android:id="@+id/btnTakePhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="43dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="8dp"
         android:text="@string/take_photo"
         app:layout_constraintBottom_toBottomOf="parent"
